--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "bootstrap": "^5.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.0"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
     "gh-pages": "^4.0.0",
+    "react-scripts": "^4.0.0",
     "typescript": "4.1.3"
   },
   "scripts": {
